# ezbuild

./: .gitignore  CMakeLists.txt  README.md
examples/basic/: ezbuild.proj
examples/basic/lib/conversion/: conversion.h  parsing.c  putting.c
examples/basic/lib/numbers/: checking.c  generating.c  numbers.h  printing.c
examples/basic/src/: io.c  io.h  main.c
src/: builtins.c  builtins.cpp  common.cpp  common.h  ezbuild.c  ezbuild.cpp  ezbuild.d.ts  fs.cpp  fs.h  javascript.cpp  javascript.h  variables.cpp  variables.h
src/quickjs/: libregexp.c  quickjs-libc.c  quickjs.c  win32compat.h
